<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_picture_light"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/grey"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textColorHint="@color/light_pink"
            android:hint=".."/>

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:hint="*"
            android:textColorHint="@color/background_chat_color"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:textSize="@dimen/_23sdp"
                android:background="@drawable/background_btn2"
                android:text="@string/clear"
                android:textColor="#FFE082" />

            <Button
                android:id="@+id/BtnBackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:textSize="@dimen/_23sdp"
                android:background="@drawable/background_btn3"
                android:text="@string/backspace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/BtnExpo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/black"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/exponent"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/divide"
                android:textSize="@dimen/_23sdp"

                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/seven"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/black"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/eight"
                android:textSize="@dimen/_23sdp"

                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/black"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/nine"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/BtnMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/multiplication"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/four"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/five"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/black"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/six"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/BtnMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:textSize="@dimen/_23sdp"

                android:background="@drawable/background_btn4"
                android:text="@string/minus"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button13"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/one"
                android:textSize="@dimen/_23sdp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/two"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:textColor="@color/black"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/three"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/BtnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/add"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button16"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"

                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:text="@string/dark_mode"
                android:textSize="@dimen/_20sdp"


                android:background="@drawable/background_btn5"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button18"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/zero"
                android:textSize="@dimen/_23sdp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:background="@drawable/background_btn4"
                android:text="@string/point"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/BtnEquals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:textColor="#FFE082"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/background_btn1"
                android:text="@string/equals"
                android:textSize="@dimen/_23sdp"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>